# icb-platform

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md
backend/: .env.example  passenger_wsgi.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  cache.py  config.py  database.py  db_guard.py  deps.py  diagnostics.py  excel_bom_parser.py  excel_cell_resolver.py  excel_formula_matcher.py  excel_formula_scanner.py  excel_grp_importer.py  excel_importer.py  formula_engine.py  main.py  pdf_generator.py  perf.py  quote_numbering.py  report_engine.py  seed_data.py  services.py  templates_config.py
backend/migrations/: 002_body_option_linked_id.sql  003_bom_section_id.sql  004_body_option_group_tables.sql  005_sap_item_codes.sql  006_skin_formula_tables.sql  007_dedup_sap_item_codes.sql  008_taping_blocks.sql  check_004_body_option_groups.sql
backend/scripts/: __init__.py  _environment_guard.py  backfill_prejob_calc_status.py  backfill_prejob_job_anchor.py  capture_v4_36b_screenshots.py  dealer_seed_decisions.csv  dealers.txt  health_check.py  import_inventory_to_sap_mock.ps1  import_inventory_to_sap_mock.py  import_prejob_templates.py  import_workbook.ps1  import_workbook.py  migrate_catalogue.ps1  normalize_template_tokens.py  seed_dealers.py  seed_fridge_units.py  seed_from_mockup.py  seed_medical_waste_template.py  seed_phase1_users.py  seed_v4_25_rules.py  seed_v4_26_spec_options.py  seed_v4_27_body_geometry.py  seed_v4_28_chassis_mock.py  seed_v4_35_demo_reset.py  seed_v4_36a_demo_reset.py  (+5 more)
(+591 files in other folders)
